- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.3.1
 
- 
        5b4c996f3643d3805080cd3eabba97295348ecb7
 
Calling "GetCurrentValue" for an accessible that doesn't implement the value interface crashes the application.
| For Gerrit Dashboard: QTBUG-40044 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 89065,2 | Accessibility Linux: Fix crashes when accessing invalid functions | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |